--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,43 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.245.2/containers/typescript-node
 {
-	"name": "PCF devcontainer",
-	"dockerFile": "Dockerfile",
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"terminal.integrated.defaultProfile.linux": "pwsh"
+	"name": "PCF DevContainer",
+	"build": {
+		"dockerfile": "Dockerfile",
+		// Update 'VARIANT' to pick a Node version: 18, 16, 14.
+		// Append -bullseye or -buster to pin to an OS version.
+		// Use -bullseye variants on local on arm64/Apple Silicon.
+		"args": {
+			"VARIANT": "16-bullseye"
+		}
 	},
-	"extensions": [
-		"danish-naglekar.pcf-builder"
-	],
-	"forwardPorts": [8181],
+	// Configure tool-specific properties.
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"danish-naglekar.pcf-builder",
+				"microsoft-IsvExpTools.powerplatform-vscode"
+			]
+		}
+	},
 	"containerEnv": {
-		"CHOKIDAR_USEPOLLING": "1"
+		"CHOKIDAR_USEPOLLING": "true"
 	},
-	"postCreateCommand": "pwsh -c 'if(-not (Test-Path /workspaces/tools)) { git clone --depth=1 https://github.com/microsoft/powerplatform-actions.git actions; Move-Item -Path ./actions/dist/pac_linux/tools -Destination /workspaces -Force; Remove-Item actions -Force -Recurse; }'"
+	"forwardPorts": [
+		8181
+	],
+	// Use 'postCreateCommand' to run commands after the container is created.
+	"postCreateCommand": "",
+	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"remoteUser": "root",
+	"features": {
+		"ghcr.io/devcontainers/features/dotnet:1": {
+			"version": "latest"
+		},
+		"ghcr.io/devcontainers/features/git-lfs:1": {
+			"version": "latest"
+		}
+	}
 }
